--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-    <h1>It's a !</h1>
+
+    <h1><%= kindOfDay %></h1>
+    <ul class="list">
+        <li>Buy Food</li>
+        <li>Cook Food</li>
+        <li>Eat Food</li>
+    </ul>
+
+    <form class="" action="/" method="post">
+        <input type="text" name="item" placeholder="Add task">
+        <button type="submit" name="button">Add</button>
+    </form>
 
 </body>
 
