--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,21 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-    <h1><%= kindOfDay %></h1>
-    <ul class="list">
-        <li>Buy Food</li>
-        <li>Cook Food</li>
-        <li>Eat Food</li>
-    </ul>
+    <div class="box" id="heading">
+        <h1><%= kindOfDay %></h1>
+    </div>
 
-    <form class="" action="/" method="post">
-        <input type="text" name="item" placeholder="Add task">
-        <button type="submit" name="button">Add</button>
-    </form>
+    <div class="box">
+
+        <% for (let i = 0; i < newListItems.length; i++) { %>
+        <div class="item">
+            <input type="checkbox">
+            <p><%= newListItems[i] %></p>
+        </div>
+        <% } %>
+
+        <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="Add Task" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
+        
+    </div>
+
+  
 
 </body>
 
