--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,12 +6,12 @@
 
  <div class="box">
 
-     <% for (let i = 0; i < newListItems.length; i++) { %>
+     <% newListItems.forEach( item => { %>
      <div class="item">
          <input type="checkbox">
-         <p><%= newListItems[i].name %></p>
+         <p><%= item.name %></p>
      </div>
-     <% } %>
+     <% }) %>
 
      <form class="item" action="/" method="post">
          <input type="text" name="newItem" placeholder="Add Task" autocomplete="off">
